# Astra

./: Cargo.toml  README.md
PUTs/: reader.c
crates/astra/: Cargo.toml
crates/astra-coverage/: Cargo.toml
crates/astra/src/: main.rs
crates/astra_cc/: Cargo.toml
crates/astra_cc/src/: lib.rs
crates/astra_cli/: Cargo.toml
crates/astra_cli/src/: lib.rs
crates/astra_collector/: Cargo.toml
crates/astra_collector/src/: lib.rs
crates/astra_cxx/: Cargo.toml
crates/astra_cxx/src/: lib.rs
crates/astra_fuzz/: Cargo.toml
crates/astra_fuzz/benches/: corpus_sharing.rs  statistics_passing.rs
crates/astra_fuzz/src/: main.rs
crates/astra_linker/: Cargo.toml
crates/astra_linker/src/: lib.rs
crates/astra_monitor/: Cargo.toml
crates/astra_monitor/src/: lib.rs
crates/astra_mutator/: Cargo.toml
crates/astra_mutator/src/: deterministic_mutators.rs  havoc_mutators.rs  lib.rs
crates/astra_observer/: Cargo.toml
crates/astra_observer/src/: coverage.rs  lib.rs  shm.rs
crates/astra_sancov/: Cargo.toml
crates/astra_sancov/src/: lib.rs  sancov.rs
crates/astra_scheduler/: Cargo.toml
crates/astra_scheduler/src/: lib.rs  mutation_queue.rs  testcase_queue.rs
crates/astra_tui/: Cargo.toml
crates/astra_tui/src/: lib.rs  log_macro.rs
crates/astra_worker/: Cargo.toml
crates/astra_worker/src/: lib.rs  test.rs  worker.rs
docs/: README.md
docs/writing_astra/: writing_astra.md
docs/writing_astra/coverage_example/: simple_pc_guard.c  simple_reader_example.c  simple_test  small_coverage_example.rs
docs/writing_astra/crash_example/: simple_crash.c
docs/writing_astra/example_targets/: README.md
docs/writing_astra/understanding_shm/rust_shm/: Cargo.toml
docs/writing_astra/understanding_shm/rust_shm/src/: main.rs
output/crashes/: crash_0025e4b97ba8a4b20d85a463f2680c35cb71e5734d85cf540d08cc129b91e14a  crash_002603c1242fdd5b3da4cdc1e9ef39716447e1f2a18c024c22851764284c8fd9  crash_00378f57d0eb42c5610d2dd1d06c13374268787c38b6219869512c3b4c845287  crash_00d2ea7f09bf6bd9a37350ac7f9da302381cb4409a91998f370f5876506ba2a1  crash_01694c7240547b4ad1c23a1f8d7d6db9a28eeaece4cacf71d99b6c7e5ce29fdb  crash_01c2b8ad733ce2a4196c5572c5d32ab254d1f2669b13b4719a15efff40d9de5e  crash_0212f55ed4b04b42eab9caf7c98dbab8c034a6f463a2d3fc95eed2f45e26619f  crash_02413214b3a1ce4a87d4e3b77cf4fd122f3b826e49192dbef18042c8ca4fe6b5  crash_0262fa0150048a467f7b24f7e839f16f9f3025f6281c973d59728ee2c85e49b5  crash_028ab7a0e54c09783ac4aa23304cb9e06cde0981454f84b21d7cd527d9addb82  crash_02f9552e05a1a0da2215a45fe78a9a527562b52c1ee5cf377f9a4044cdb05ee9  crash_032cc0acda57d1017929c6a7d12311d6278f44852742c768eabc9039bf63303f  crash_039e07f0f0116a4c1ec09929d79ca8190a9d32ef7236677c063be5c52ff46cc4  crash_04f78552ddfcc407c7acbe20ce1b6a2d1ad6624a9981490fca1906facc046eea  crash_05217e1db5e9b8e8823945c4fde36244e61d88cf529086fd9f0307020c8df72d  crash_058a2c0e81be65c3b3a971773accfca14ec46ae45fe2f44e19b3e17f8ec5154f  crash_06b5d00a040bdf32b99784df2382344a4bf1959434e36478376f469b1519dbf0  crash_06d7ae57140235dcbf2d305d5cf49c337e6cfe770e86499ec76c939539507867  crash_0753a2d58d85fc39ce761887c16267c7decac465e28ebf264d706b3f62889c7d  crash_0759a89fc988f401ecbb92c9e82cfb095be031d65e62078d8f7e472ad2cfe5fe  crash_0773bcb73f9bd467e23dcce90f62bbe62f3c0a22284e9c0bf905c25fdae5abcc  crash_077abd84494581eff1dbf1857bec7342795b1199e693ede5980660f4962e08c7  crash_0805479ace73d4b51e377732a587d35b721e924de5fa4be69c98ed044fec8584  crash_0834c63bc561080cc14f7fe12ce9a5c14eb18e1e2ea98627fe8c390915624f57  crash_085094ef057fff2958df94bb27830c98d229248594ccf92d7426179991809662  crash_0864c81d3b5a29fb83d42588eaa6df1fc35a0ae04ede9f62b7be520b2613c746  crash_090ff5c82dc4c505870c3404efbadfe212a971285975a13162320d8f0ee304d0  crash_093d60f11b1b27c5afa8458c1f4831614e3f0bf9f3e4e8a0098027efdbfd15ae  crash_093dcc7262c7436bd65eb1ebbbbe732776c4a2121f786a5e18fd93740236a2e2  crash_09563bb15e8d7f3398115afcc7ba159ac55a196c70daf76e3ce85b637a4377e4  crash_098e7f165ac975f51bc48ae46aa92971f5cf493c8675b3fb342d66ce5cfe1f1b  crash_09dfd6446a2d75b98637c97f21cfb27a1879f49bd3dfec0c7c2e32ac68ff5a83  crash_09f10c6ab47028bbda70d0bce0973568be8177cccb62ae3029d46a4ec9054ff5  crash_0a0fc9fa09792120be17651ffd0b9b2b83da17ba0cbe7f92e6157bd452f15718  crash_0aa76232304fb5bd0bb6b17d62d71835aeb6b54362ab53c003b85b0abeb6ca62  crash_0b08f01253360654585bb678e591fbb8b4d52a5e721a410c80624dbd1cfeccb8  crash_0b55fc66d1c67842712c2c955b91acb5ad7da3f3491c902acd3c94599a1111f1  crash_0b5b5b9de5c0455a650a062813ff2b895686ec63b265f4e6dcc26063df3d540e  crash_0b82ee20c2b0fc72acba89fc3458c96027b9e313029900baf8f3e966334217b2  crash_0ba24aeb6600ca6b9f6145be8e8bebde7f0b959e61ea7adfd2828bcc567b7f2f  (+511 more)
utils/: install.sh
