[workspace] 
resolver = "2"
members = [
    "crates/astra",
    "crates/astra_cli", 
    "crates/astra_sancov",
    "crates/astra_linker", 
    "crates/astra_observer", 
    "crates/astra_collector", 
    "crates/astra_scheduler", 
    "crates/astra_worker", 
    "crates/astra_mutator", 
    "crates/astra_tui",
]

default-members = [
    "crates/astra",
    "crates/astra_cli",
    "crates/astra_sancov",
    "crates/astra_linker",
    "crates/astra_observer",
    "crates/astra_collector",
    "crates/astra_scheduler",
    "crates/astra_worker",
    "crates/astra_mutator", 
    "crates/astra_tui",
]

[workspace.package]
name = "Astra"
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "./README.md"
authors = ["Salim Largo <me@2ourc3.com>"]


[workspace.dependencies]
astra = { path = "./crates/astra" }
astra_cli = { path = "./crates/astra_cli" }
astra_sancov = { path = "./crates/astra_sancov" }
astra_linker = { path = "./crates/astra_linker" }
astra_observer = { path = "./crates/astra_observer" }
astra_collector = { path = "./crates/astra_collector" }
astra_scheduler = { path = "./crates/astra_scheduler" }
astra_worker = { path = "./crates/astra_worker" }
astra_mutator = { path = "./crates/astra_mutator" }
astra_tui = { path = "./crates/astra_tui" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
