[workspace] 
resolver = "2"
members = [
    "crates/astra",
    "crates/astra_cli", 
    "crates/astra_sancov",
    "crates/astra_linker", 
    "crates/astra_observer", 
    "crates/astra_collector", 
    "crates/astra_scheduler", 
    "crates/astra_worker", 
    "crates/astra_mutator", 
    "crates/astra_tui",
]

default-members = [
    "crates/astra",
    "crates/astra_cli",
    "crates/astra_sancov",
    "crates/astra_linker",
    "crates/astra_observer",
    "crates/astra_collector",
    "crates/astra_scheduler",
    "crates/astra_worker",
    "crates/astra_mutator", 
    "crates/astra_tui",
]

[workspace.package]
name = "Astra"
version = "0.0.1"
edition = "2024"
license = "MIT"
readme = "./README.md"
authors = ["Salim Largo <me@2ourc3.com>"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
