[package]
name = "astra"
version = "0.0.1"
authors = ["Salim Largo <me@2ourc3.com>"]
edition = "2024"

[dependencies]
astra_cli = { path = "../astra_cli" }
astra_linker = { path = "../astra_linker" }
astra_observer = { path = "../astra_observer" }

clap = { version = "4.5.51", features = ["derive"] }
