[package]
name = "astra"
version = "0.0.1"
authors = ["Salim Largo <me@2ourc3.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0.100"
astra_cli = { path = "../astra_cli" }
astra_linker = { path = "../astra_linker" }
astra_observer = { path = "../astra_observer" }
astra_collector = { path = "../astra_collector" }
astra_worker = { path = "../astra_worker" }
astra_mutator = { path = "../astra_mutator" }
astra_tui = { path = "../astra_tui" }
astra_cc = { path = "../astra_cc" }
astra_cxx = { path = "../astra_cxx" }

clap = { version = "4.5.51", features = ["derive"] }
nix = { version = "0.30.1", features = ["fs"] }
