[package]
name = "astra_sancov"
version = "0.0.1"
authors = ["Salim Largo <me@2ourc3.com>"]
edition = "2024"

[dependencies]
astra_observer = { path = "../astra_observer" }
libc = "0.2.177"
rustix = { version = "1.1.2", features = ["fs", "mm", "shm"] }

[lib]
crate-type   = ["rlib", "cdylib", "staticlib"]

[build]
rustflags = ["--emit=obj"]