[package]
name = "astra_worker"
version = "0.0.1"
authors = ["Salim Largo <me@2ourc3.com>"]
edition = "2024"


[dependencies]
astra_observer = { path = "../astra_observer" }
astra_scheduler = { path = "../astra_scheduler" }
astra_collector = { path = "../astra_collector" }

lazy_static = "1.5.0"
rand = "0.9.2"
crossbeam-channel = "0.5.15"
crossbeam = "0.8.4"
