[package]
name = "astra_worker"
version = "0.0.1"
authors = ["Salim Largo <me@2ourc3.com>"]
edition = "2024"


[dependencies]
astra_observer = { path = "../astra_observer" }
astra_collector = { path = "../astra_collector" }
astra_mutator = { path = "../astra_mutator" }
astra_monitor = { path = "../astra_monitor" }
astra_tui = { path = "../astra_tui" }

lazy_static = "1.5.0"
rand = "0.9.2"
crossbeam-channel = "0.5.15"
crossbeam = "0.8.4"
