[package]
name = "astra_worker"
version = "0.0.1"
authors = ["Salim Largo <me@2ourc3.com>"]
edition = "2024"


[dependencies]
astra_observer = { path = "../astra_observer" }
astra_collector = { path = "../astra_collector" }
astra_mutator = { path = "../astra_mutator" }
astra_monitor = { path = "../astra_monitor" }
astra_tui = { path = "../astra_tui" }

lazy_static = "1.5.0"
rand = "0.9.2"
crossbeam-channel = "0.5.15"
crossbeam = "0.8.4"
wait-timeout = "0.2.1"
libc = "0.2.177"
clap = { version = "4.5.51", features = ["derive"] }
nix = { version = "0.30.1", features = ["fs"] }
colored_text = "0.3.0"
chrono = "0.4.42"
